# logger

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  logger.cmake.in  sonar-project.properties
docs/: recipes.md
examples/: CMakeLists.txt  logger-client-config.ini  logger-daemon-config.ini
examples/cpp/: Makefile  README.md  customHandlerExample.cpp  example.cpp
examples/csharp/: build.sh  example.cs
examples/java/: README.md  pom.xml
examples/java/src/main/java/com/neueda/logger/example/: App.java
examples/python/: example.py
src/: CMakeLists.txt  FormatScanner.cc  FormatScanner.cpp  FormatScanner.h  FormatScanner.l  ITransportDelegate.h  consoleLogHandler.cpp  consoleLogHandler.h  daemon.cpp  daemon.h  fileLogHandler.cpp  fileLogHandler.h  logHandler.cpp  logHandler.h  logSeverity.h  logger.cpp  logger.h  loggerDaemonServer.cpp  loggerDaemonServer.h  sharedMemoryLogHandler.cpp  sharedMemoryLogHandler.h  sharedMemoryRingBuffer.cpp  sharedMemoryRingBuffer.h  syslogLogHandler.cpp  syslogLogHandler.h  tokens.h  unixSocketClient.cpp  unixSocketClient.h
src/bindings/: CMakeLists.txt  logger.csharp.i  logger.i  logger.java.i  logger.py.i
src/bindings/csharp/: CMakeLists.txt  example.cs
src/bindings/java/: CMakeLists.txt  build.sh  example.java  run.sh
src/bindings/python/: CMakeLists.txt
test/: CMakeLists.txt  scratch.cc  testCoreOnMessageLength.cc  testFormatScanner.cc  testLogHandler.cc  testLogService.cc  testStreamInterface.cc  testrunner.cc
