#
# Copyright 2014-2018 Neueda Ltd.
#

set(EXAMPLES_INSTALL_LOCATION examples/logger)

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cpp/ DESTINATION
        ${EXAMPLES_INSTALL_LOCATION}/cpp/)

if(JAVA)
    INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/java/ DESTINATION
            ${EXAMPLES_INSTALL_LOCATION}/java/)
endif()

if(PYTHON)
    INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/ DESTINATION
            ${EXAMPLES_INSTALL_LOCATION}/python/)
endif()

set(EXAMPLE_INSTALL_FILES
  ${CMAKE_CURRENT_SOURCE_DIR}/logger-client-config.ini
  ${CMAKE_CURRENT_SOURCE_DIR}/logger-daemon-config.ini)

# Declare install target for python
install(FILES ${EXAMPLE_INSTALL_FILES}
  DESTINATION etc)
